@@ -1,3 +1,7 @@
+2015-08-20  Carl Hetherington  <cth@carlh.net>
+
+	* Fix assertion failure with overlapping video content (#666).
+
 2015-08-19  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.42 released.
